@@ -1,6 +1,9 @@
 Release 1.0.3 (in development)
 ==============================
 
+* #494: Fix the ``maxdepth`` option for the ``toctree()`` template
+  callable when used with ``collapse=True``.
+
 * #507: Fix crash parsing Python argument lists containing brackets
   in string literals.
 
